# necomi

./: .bzrignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Calli  INSTALL  INSTALL.md  LICENSE  NOTICE  README.md  TODO  cuiloa.pc.in  necomi.pc.in  releases.json
cmake/: CodeCoverage.cmake  FindCuiloa.cmake  FindFFTW3.cmake  FindNecomi.cmake
cuiloa/: cuiloa.h
cuiloa/base/: array.h  basearray.h  broadcasting.h  concepts.h  delayed.h  numerics.h  random.h  slices.h  streams.h  traits.h
cuiloa/codecs/: hdf5.h  inr.h  png.h
cuiloa/filters/: deriche.h
cuiloa/funcs/: interpolation.h  numerics.h  random.h  trigonometrics.h
cuiloa/integrate/: sde.h
doc/: Doxyfile  Doxyfile.in
doc/doxy/: DoxygenLayout.xml
doc/source/: arrays.rst  concepts.rst  conf.py  delayed.rst  hdf5.rst  index.rst  inr.rst  install.rst  io.rst  libpng.rst  license.rst  numerics.rst  overview.rst  random.rst  tutorial.rst
doc/source/_static/: poco.css
doc/source/delayed/: arithmetics.rst  broadcasting.rst  creation.rst  statistics.rst  transforms.rst
doc/source/numerics/: filters.rst  random.rst
doc/source/poco/: layout.html
doc/source/poco/static/: poco.css
doc/src/: main.md
include/: cuiloa.h
include/base/: array.h
include/codecs/: hdf5.h  inr.h
include/filters/: deriche.h
necomi/: filters.h  necomi.h
necomi/algorithms/: modif.h  sort.h
necomi/arrays/: delayed.h  dimarray.h  stridedarray.h  vararray.h
necomi/base/: array.h  basearray.h  broadcasting.h  concepts.h  delayed.h  dynarray.h  slices.h  streams.h  traits.h
necomi/codecs/: hdf5.h  inr.h  png.h  streams.h  txt.h
necomi/convert/: stl.h
necomi/core/: coordinates.h  iterators.h  loops.h  mpl.h  shape.h  slices.h  strides.h
necomi/delayed/: arithmetic.h  broadcasting.h  comparisons.h  maps.h  ranges.h  transforms.h
necomi/filters/: deriche.h  exponential.h
necomi/funcs/: interpolation.h  numerics.h  random.h  trigonometrics.h
necomi/numerics/: arithmetics.h  basic.h  exponents.h  fft.h  interpolation.h  nearest-int.h  random.h  sde.h  statistics.h  trigonometrics.h
necomi/traits/: arrays.h  generic.h  shape.h
share/bitmaps/: README
tests/: arraytestcase.h  catch-tests.cc  delayedtestcase.h  hdf5testcase.h  main.cc  randomtestcase.h  test-algos-modif.cc  test-algos-sort.cc  test-arrays.cc  test-broadcasting.cc  test-codecs-streams.cc  test-concepts.cc  test-convert-stl.cc  test-core-iterators.cc  test-delayed-arithmetic.cc  test-delayed-comparisons.cc  test-delayed-maps.cc  test-delayed-transforms.cc  test-delayed.cc  test-dynarray.cc  test-filters-deriche.cc  test-filters-exponential.cc  test-hdf5.cc  test-numerics-fft.cc  test-numerics.cc  test-opencl.cc  test-png.cc  test-random.cc  test-slices.cc  test-traits-shape.cc  test-transforms.cc  test-vararray.cc
